src/test/deca/syntax/invalid/sansObjet/BadPrintlnx1.deca
{
    printlnx('Hello 2020');
}